initial buildout